--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_analytics: ^10.0.6
   firebase_crashlytics: ^3.0.6
   firebase_remote_config: ^3.0.6
+  firebase_messaging: ^14.6.4
 
   # Utils
   logger: ^1.0.0
@@ -71,6 +72,9 @@ dependencies:
   auto_size_text: ^3.0.0
   easter_egg_trigger: ^1.0.1
   calendar_view: ^1.0.1
+  aws_sns_api: ^1.2.0
+  flutter_local_notifications: ^9.1.5
+  overlay_support: ^2.1.0
 
 dev_dependencies:
   flutter_test:
