--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   calendar_view: ^1.0.1
   flutter_local_notifications: ^9.1.5
   overlay_support: ^2.1.0
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
