Migrate mocks to null safety

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ app_untranslated_messages.yaml
 
 # Flutter test
 test/**/failures/
+test/mock/**/*.mocks.dart
 
 # Certificates and secrets
 assets/certificates/
